# cbrne-intelligence-lab

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/audit/: service.py
backend/app/detection/: ai_misuse_engine.py  bio_engine.py  engine.py  fraud_engine.py
backend/app/domain_packs/ai_misuse/: __init__.py  rules.py
backend/app/domain_packs/cbrne/: bio_monitoring_rules.py  chem_hazmat_rules.py  epa_rmp_toxic_substances.py
backend/app/domain_packs/fraud/: __init__.py  rules.py
backend/app/evaluation/: __init__.py  service.py
backend/app/ingestion/: delimited_upload.py  nrc_workbook.py  unit_conversion.py
backend/app/models/: __init__.py  entities.py
backend/app/reporting/: __init__.py  service.py
backend/app/routers/: ai_misuse.py  alerts.py  connectors.py  detections.py  evaluations.py  events.py  fraud.py  health.py  ingests.py  metrics.py  reports.py  sources.py
backend/app/schemas/: api.py
backend/fixtures/ai_misuse/: ai_misuse_safe_eval_v0.1.json
backend/fixtures/fraud/: fraud_safe_eval_v0.1.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_operational_core.py  0002_add_event_commodity.py  0003_add_review_framework.py  0004_add_evaluation_framework.py  0005_add_reports.py
backend/scripts/: backfill_commodity.py  backfill_phmsa_stage2_features.py
backend/tests/: test_workflow.py
data/: README.md
docs/: ai-misuse-risk-assessment.md  architecture.md  deployment-security.md  detection-methodology.md  (+12 more)
(+22 files in other folders)
